Tests/PushQuotients.lean
import Quotify.Tactic
import Quotify.Command
import Quotify.Unexpanders

@[quotify]
theorem t (l‚āĀ l‚āā : List őĪ) (h : l‚āĀ ‚Čą l‚āā) : l‚āĀ.reverse ‚Čą l‚āā.reverse := sorry

attribute [quotify] List.isSetoid

/--
error: unsolved goals
őĪ : Type u_1
l‚āĀ l‚āā : List őĪ
h : (‚ü¶List.reverse‚üß) ‚ü¶l‚āĀ‚üß = (‚ü¶List.reverse‚üß) ‚ü¶l‚āā‚üß
‚äĘ ‚ü¶l‚āĀ‚üß = ‚ü¶l‚āā‚üß
-/
#guard_msgs in
example (l‚āĀ l‚āā : List őĪ) (h : l‚āĀ.reverse ‚Čą l‚āā.reverse) : l‚āĀ ‚Čą l‚āā := by
  quotify
